# mlir_example

./: CMakeLists.txt  LEARNING_MAIN_CPP.md  README.md  build.sh  deep_learning_output.mlir  output.ll  output.mlir  run.sh  run_deep_learning.sh
docs/: architecture.md  design.md
docs/deep_learning/: deep_learning_mlir_design.md  tutorial.md
examples/: factorial.mlir  simple_add.mlir
examples/deep_learning/: cnn_model.mlir  neural_network.mlir
src/: main.cpp  simple_main.cpp
src/deep_learning/: dl_main.cpp
src/dialect/toy/: ToyDialect.cpp  ToyOps.td
tests/: test_basic.cpp
